# G10X-EDM

./: CMakeLists.txt  EdmGeantEventSave.cc  EdmGeantEventSave.hh  TH2FSelector.cc  TH2FSelector.hh  bkg.root  clean  config.dat.original  el.root  gui.mac  init_vis.mac  mainG10X.cc  run1.mac  vis.mac
include/: BeamPipe.hh  EdmEventInformation.hh  EdmFourBlockCalorimeter.hh  EdmGeantEventSave.hh  EdmModularCalorimeter.hh  EdmModularCalorimeterAnalysis.hh  EdmPrimaryParticleInformation.hh  G10XActionInitialization.hh  G10XGenerator.hh  GG4ModuleEventAction.hh  GG4ModuleHit.hh  GG4ModuleSD.hh  GG4PhiFitter.hh  RunAction.hh  StackingAction.hh  X2_Detector.hh  X_InteractionGenerator.hh  X_VertexGenerator.hh
modules/: Makefile
modules/Analysis/: Makefile
modules/Configuration/: ConfigFileReader.cc  ConfigFileReader.hh  Makefile  VolumeGenerator.cc  VolumeGenerator.hh  test.cfg
modules/EdmCommon/: Makefile  Makefile.original  Ruller.cc  Ruller.hh  UArrow.cc  UArrow.hh  UDynamicManager.cc  UDynamicManager.hh
modules/EdmFileAnalysis/: Makefile  Test_main  Test_main.cc  Test_output.root
modules/EdmFunc/: EdmFunctionalAy270.cc  EdmFunctionalAy270.hh  EdmFunctional_main.cc  EdmFunctional_main.root  InelasticAnalysis  InelasticAnalysis.cc  InelasticAnalysis.root  Makefile  XXClass.cc  dataFileRW  dataFileRW.cc  dataGenerator4Plot  dataGenerator4Plot.cc  dataGenerator4Plot.root  draw_tabulated_Ay270.C  edmTest.root  eventsThetaGenerated_270.C
modules/EdmGeantTEvent/: EdmGeantParticleDB.cc  EdmGeantParticleDB.hh  EdmGeantTEvent.cc  EdmGeantTEvent.hh  EdmGeantTEventDict.cc  EdmGeantTEventDict_rdict.pcm  EdmGeantTEventLinkDef.hh  Makefile  Makefile.original  Test_main  Test_main.cc
modules/InteractionGenerators/: HadronicInteractionGenerator.cc  HadronicInteractionGenerator.hh  InteractionElasticF.cc  InteractionElasticF.hh  InteractionInelasticF.cc  InteractionInelasticF.hh  Makefile  PolarizationPhiGenerator.cc  PolarizationPhiGenerator.hh  UCosThetaGenerator.cc  UCosThetaGenerator.hh  UniformThetaGenerator.cc  UniformThetaGenerator.hh  VInteractionGenerator.cc  VInteractionGenerator.hh
modules/TriggerClasses/: AnkeG4Trigger4Coef.cc  AnkeG4Trigger4Coef.hh  AnkeG4TriggerFd.cc  AnkeG4TriggerFd.hh  Makefile  Trigger0.cc  Trigger0.hh  VirtualTrigger.cc  VirtualTrigger.hh
modules/VertexGenerators/: 00_README  Makefile  VVertexGenerator.hh  VertexGeneratorA.cc  VertexGeneratorA.hh  VertexGeneratorO.cc  VertexGeneratorO.hh  VertexGeneratorU.cc  VertexGeneratorU.hh
old_classes/: AnalysisManager.cc  AnalysisManager.hh  CalorimeterAnalysis.cc  CalorimeterAnalysis.hh  G10XDetectorConstruction.cc  G10XDetectorConstruction.hh  G10XEventAction.cc  G10XEventAction.hh  G10XEventSave.cc  G10XEventSave.hh  G10XModuleSD.cc  G10XModuleSD.hh  G10XSiModuleHit.cc  G10XSiModuleHit.hh  G10XSiModuleSD.cc  G10XSiModuleSD.hh  GG4TrackModuleHit.cc  GG4TrackModuleHit.hh  GG4TrackModuleSD.cc  GG4TrackModuleSD.hh  HeterogenusDetector.cc  HeterogenusDetector.hh  HomogenusDetector.cc  HomogenusDetector.hh  SFDetector.cc  SFDetector.hh  StepAnalysis.cc  StepAnalysis.hh  TrackingAction.cc  TrackingAction.hh  X_Detector.cc  X_Detector.hh  config.dat.20150430
src/: BeamPipe.cc  EdmFourBlockCalorimeter.cc  EdmGeantEventSave.cc  EdmModularCalorimeter.cc  EdmModularCalorimeterAnalysis.cc  G10XActionInitialization.cc  G10XGenerator.cc  GG4ModuleEventAction.cc  GG4ModuleHit.cc  GG4ModuleSD.cc  GG4PhiFitter.cc  RunAction.cc  StackingAction.cc  X2_Detector.cc  X_InteractionGenerator.cc  X_VertexGenerator.cc
